<resources>
    <string name="app_name">Rick and Morty</string>
    <string name="validate_button">Validate</string>
    <string name="cancel_button">Cancel</string>
    <string name="gender_label">Gender</string>
    <string name="status_label">Status</string>
    <string name="sort_and_filter_title">Sort and filter</string>
    <string name="unknown_label">unknown</string>
    <string name="filters_title">Filters</string>
    <string name="error_require_character_id">Character ID can\'t be found</string>
    <string name="error_character_not_found">Character doesn\'t exist</string>
    <string name="error_fail_load_character">Fail to load character</string>
    <string name="error_fail_to_load_characters">Fail to load character list</string>
    <string name="loading_label">Loading</string>
    <string name="all_chip">All</string>
    <string name="alive_chip">Alive</string>
    <string name="dead_chip">Dead</string>
    <string name="male_chip">Male</string>
    <string name="female_chip">Female</string>
    <string name="unknown_chip">Unknown</string>
    <string name="species_label">Species</string>
    <string name="type_label">Type</string>
</resources>