<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textAllCaps="true" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/gender_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/all_gender"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_chip"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/male_gender"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_chip"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/female_gender"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female_chip"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/unknown_gender"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_chip"
                app:chipBackgroundColor="@color/chip_background_color" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/gray_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_label"

            android:textAllCaps="true" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/status_chips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/all_status"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_chip"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/alive_status"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alive_chip"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/dead_status"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dead_chip"
                app:chipBackgroundColor="@color/chip_background_color" />

            <com.google.android.material.chip.Chip
                android:id="@+id/unknown_status"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown_chip"
                app:chipBackgroundColor="@color/chip_background_color" />
        </com.google.android.material.chip.ChipGroup>
    </LinearLayout>
</LinearLayout>