<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_back">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white_back"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/ShapeAppearance.App.CircleImageView"
            tools:src="@drawable/im_character_placeholder" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="Rick Sanchez" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text">

            <TableRow>

                <TextView
                    style="@style/DetailsTableHeader"
                    android:text="@string/status_label" />

                <TextView
                    android:id="@+id/status_text"
                    style="@style/DetailsTableItem"
                    tools:text="status" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DetailsTableHeader"
                    android:text="@string/species_label" />

                <TextView
                    android:id="@+id/species_text"
                    style="@style/DetailsTableItem"
                    tools:text="species" />
            </TableRow>

            <TableRow>

                <TextView
                    style="@style/DetailsTableHeader"
                    android:text="@string/gender_label" />

                <TextView
                    android:id="@+id/gender_text"
                    style="@style/DetailsTableItem"
                    tools:text="gender" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>